[package]
name = "aoc-2022-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
min-max = "0.1.8"
parse_int = "0.6.0"
rand = "0.8.5"
queues = "1.1.0"
regex = "1.7.0"
substring = "1.4.5"
rayon = "1.6.1"
petgraph = "0.6.2"
priority-queue = "1.3.0"
fasthash = "0.4.0"
